# StudentGridsSystem

./: .dockerignore  .gitignore  FOREIGN_LANGUAGE_TESTS.md  Procfile  db.sqlite3  docker-compose.yml  dockerfile  manage.py  pre_parser.py  pyproject.toml  raw_lines.txt  raw_lines_2.txt  requirements.txt  test_foreign_language_requirement.py  test_runner.py  test_runner_V2.py  test_runner_evaluation.py
accounts/: admin.py  tests.py
accounts/migrations/: 0001_initial.py
evaluation/: forms.py  urls.py  views.py
evaluation/templates/: index.html  login.html  student_detail.html  upload.html
grids/: .gitignore  README.md  __init__.py  common.py  test_foreign_language_requirement.py  validate_module.py
grids/data/: buckets.json  course_listing.json  foreign_languages.json  majors.json
grids/evaluation/: __init__.py  equivalencies.py  filters.py  rule_engine.py
grids/models/: __init__.py  course.py  evaluation.py  programme.py  student.py  transcript.py
grids/parsing/: __init__.py  grades.py  grid_parser.py  parser_service.py  splitter.py  transcript_parser.py
pages/: views.py
performance/: models.py  tests.py  urls.py  views.py
performance/migrations/: 0001_initial.py  0002_alter_auditrecord_total_credits_earned_and_more.py  0002_studentprofile_flr_exempt_verified.py  0003_alter_auditrecord_total_credits_earned_and_more.py
static/css/: base.css  login.css  signup.css
staticfiles/: staticfiles.json
student_grids/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html  student_details.html  student_portal.html  upload.html
(+16 files in other folders)
