[project]
name = "student-grids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "crispy-bootstrap5==2025.6",
    "django==5.2.*",
    "django-crispy-forms>=2.2,<3",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
]
